--- a/rate.html
+++ b/rate.html
@@ -593,19 +593,19 @@
 
                     <div class="form-field">
                         <label class="form-label-title" for="name">Примітка</label>
-                        <div class="box-textarea-last-123 ">
-                            <textarea class="form-textarea-123" name="name" rows="1" style="height: 31px" id="name"
+                        <div class="box-textarea-last-note ">
+                            <textarea class="form-textarea-note" name="name" rows="1" style="height: 31px" id="name"
                                 placeholder="Примітка"></textarea>
                         </div>
                     </div>
                 </div>
             </form>
         </section>
-        <div class="box-button">
-            <button type="button" class="button">Зберегти</button>
+        <div class="box-right">
+            <div class="box-button">
+                <button type="button" class="button">Зберегти</button>
+            </div>
         </div>
-
-
     </div>    
 </body>
 
