--- a/rate.html
+++ b/rate.html
@@ -137,7 +137,7 @@
                         <label class="form-label-title" for="name">Опис тарифу</label>
                         <div class="box-textarea">
                             <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
-                                placeholder="Тра-ля-ля"></textarea>
+                                placeholder="Короткий опис тарифа"></textarea>
                         </div>
                     </div>
 
