--- a/rate.html
+++ b/rate.html
@@ -68,7 +68,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Статус тарифа</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Статус тарифа</label>
                         <div class="box-textarea">
                             <select class="drop-list">
                                 <option>Оберіть з переліку</option>
@@ -89,7 +89,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Відповідальний за тариф</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Відповідальний за тариф</label>
                         <div class="box-textarea">
                             <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
                                 placeholder="Співробітник бізнеса, який здійснює оперативне управління тарифом"></textarea>
@@ -97,7 +97,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Відповідальний від ІТ</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Відповідальний від ІТ</label>
                         <div class="box-textarea">
                             <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
                                 placeholder="Керівника IT-департаменту, відповідального за актуалізацію тарифів у ІТ-системі"></textarea>
@@ -105,7 +105,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">ІТ-система</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>ІТ-система</label>
                         <div class="box-textarea-last">
                             <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
                                 placeholder="ІТ-система, в котрій реалізовано тариф"></textarea>
@@ -118,7 +118,7 @@
 
                 <div class="box">
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Назва продукту</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Назва продукту</label>
                         <div class="box-textarea">
                             <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
                                 placeholder="Найменування продукту, за яким затверджується/актуалізується тариф"></textarea>
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Назва послуги</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Назва послуги</label>
                         <div class="box-textarea">
                             <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
                                 placeholder="Найменування пслуги, за якою затверджується/актуалізується тариф"></textarea>
@@ -134,7 +134,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Опис тарифу</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Опис тарифу</label>
                         <div class="box-textarea">
                             <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
                                 placeholder="Короткий опис тарифа"></textarea>
@@ -158,7 +158,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Тип тарифа</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Тип тарифа</label>
                         <div class="box-textarea">
                             <select class="drop-list">
                                 <option>Оберіть з переліку</option>
@@ -269,7 +269,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Платник комісії</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Платник комісії</label>
                         <div class="box-textarea">
                             <select class="drop-list">
                                 <option>Оберіть з переліку</option>
@@ -283,7 +283,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">База нарахування комісії</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>База нарахування комісії</label>
                         <div class="box-textarea">
                             <select class="drop-list">
                                 <option>Оберіть з переліку</option>
@@ -301,7 +301,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Тип комісії</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Тип комісії</label>
                         <div class="box-textarea">
                             <select class="drop-list">
                                 <option>Оберіть з переліку</option>
@@ -312,7 +312,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Строк списання</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Строк списання</label>
                         <div class="box-textarea">
                             <select class="drop-list">
                                 <option>Оберіть з переліку</option>
@@ -332,7 +332,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Валюта операції</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Валюта операції</label>
                         <div class="box-textarea">
                             <select class="drop-list">
                                 <option>Оберіть з переліку</option>
@@ -344,7 +344,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Валюта комісії</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Валюта комісії</label>
                         <div class="box-textarea">
                             <select class="drop-list">
                                 <option>Оберіть з переліку</option>
@@ -358,7 +358,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Канал проведення операції</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Канал проведення операції</label>
                         <div class="box-textarea-check">
                             <label class="checkbox-channel">
                                 <input type="checkbox" name="channel" value="HTML">
@@ -443,7 +443,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Значення тарифу</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Значення тарифу</label>
                         <div class="box-textarea-last">
                             <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
                                 placeholder="Числове значення тарифу, який застосовується до операції/транзакції/платежу"></textarea>
@@ -561,9 +561,72 @@
 
 
 
+                <!-- Для каталока продуктов -->
+
+                <!-- <div class="box">
+                    <div class="form-field">
+                        <label class="form-label-title" for="name">Тарифи</label>
+                        <div class="box-textarea-last">
+                            <a href="" class="prodact-link">Перелік тарифів по продукту</a>
+                        </div>
+                    </div>
+                
+                </div> -->
+
+                <!-- <div class="box">
+                    <div class="form-field">
+                        <label class="form-label-title" for="name">Тарифи</label>
+                            <table class="table-rate">
+                                <thead>
+                                    <tr>
+                                        <th width="10px">№</th>
+                                        <th>Назва послуги</th>
+                                        <th>Опис тарифу</th>
+                                        <th>Платник комісії</th>
+                                        <th>База нарахування комісії</th>
+                                        <th>Тип комісії</th>
+                                        <th>Валюта операції</th>
+                                        <th>Канал проведення операції</th>
+                                        <th>Значення тарифу</th>
+                                        <th>Статус тарифу</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Картки для виплат з індивідуальним дизайном</td>
+                                        <td>Комісія за поповнення Картки для виплат з індивідуальним дизайном безготівковим платежем від третіх осіб
+                                            без її
+                                            наявності</td>
+                                        <td>Власник карти/рахунку/скриньки</td>
+                                        <td>За транзакцію/платіж</td>
+                                        <td>Відсоток від суми</td>
+                                        <td>UAH</td>
+                                        <td>Каса / відділення</td>
+                                        <td>0,5</td>
+                                        <td>Діючий</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>Картки для виплат з індивідуальним дизайном</td>
+                                        <td>Комісія за розрахункове обслуговування неактивного рахунку по продукту</td>
+                                        <td>Власник карти/рахунку/скриньки</td>
+                                        <td>За рахунок/карту/довідку</td>
+                                        <td>Фіксована значення</td>
+                                        <td>UAH</td>
+                                        <td>Автоматично</td>
+                                        <td>20</td>
+                                        <td>Діючий</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                    </div>
+                </div> -->
+
+
                 <div class="box">
                     <div class="form-field">
-                        <label class="form-label-title" for="calendar">Дата початку дії тарифу</label>
+                        <label class="form-label-title" for="calendar"><span class="note">*</span>Дата початку дії тарифу</label>
                         <div class="box-textarea">
                             <input class="calendar" type="date" name="calendar">
                         </div>
@@ -577,7 +640,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Документ з рішенням КО</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Документ з рішенням КО</label>
                         <div class="box-textarea">
                             <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
                                 placeholder="Додайте посилання на протокол засідання КО"></textarea>
@@ -585,7 +648,7 @@
                     </div>
 
                     <div class="form-field">
-                        <label class="form-label-title" for="name">Дата затвердження КО</label>
+                        <label class="form-label-title" for="name"><span class="note">*</span>Дата затвердження КО</label>
                         <div class="box-textarea">
                             <input class="calendar" type="date" name="calendar">
                         </div>
@@ -599,6 +662,17 @@
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+
+
+
+
+
+
             </form>
         </section>
         <div class="box-right">
