--- a/rate.html
+++ b/rate.html
@@ -112,8 +112,7 @@
                         </div>
                     </div>
                 </div>
-              
-
+            
 
 
                 <div class="box">
@@ -129,8 +128,9 @@
                     <div class="form-field">
                         <label class="form-label-title" for="name">Назва вторинного продукту</label>
                         <div class="box-textarea">
-                            <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
-                                placeholder=" + Додати вторинний продукт"></textarea>
+                            <a href="" class="prodact-link"> + Додати вторинний продукт </a>
+                            <!-- <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
+                                placeholder="+ Додати вторинний продукт"></textarea> -->
                         </div>
                     </div>
 
