--- a/rate.html
+++ b/rate.html
@@ -292,6 +292,9 @@
                                 <option>Мерчант</option>
                                 <option>Одержувач</option>
                                 <option>Платник</option>
+                                <option>Пенсіонер</option>
+                                <option>Резидент</option>
+                                <option>Не резидент</option>
                             </select>
                         </div>
                     </div>
