--- a/rate.html
+++ b/rate.html
@@ -111,6 +111,16 @@
                                 placeholder="Інформаційна система, в котрій реалізовано тариф"></textarea>
                         </div>
                     </div>
+
+                    <div class="form-field">
+                        <label class="form-label-title" for="name">Інформаційна підсистема</label>
+                        <div class="box-textarea-last">
+                            <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
+                                placeholder="Інформаційна підсистема, в котрій реалізовано тариф"></textarea>
+                        </div>
+                    </div>
+
+
                 </div>
             
 
