--- a/rate.html
+++ b/rate.html
@@ -106,7 +106,7 @@
 
                     <div class="form-field">
                         <label class="form-label-title" for="name"><span class="note">*</span>Інформаційна система</label>
-                        <div class="box-textarea-last">
+                        <div class="box-textarea">
                             <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
                                 placeholder="Інформаційна система, в котрій реалізовано тариф"></textarea>
                         </div>
